--- a/configure.ac
+++ b/configure.ac
@@ -3,6 +3,8 @@ AM_INIT_AUTOMAKE([foreign -Wall])
 
 AC_PROG_CC
 
+PKG_CHECK_MODULES([FUSE], [fuse3 >= 3.2.1])
+
 AC_CONFIG_FILES(
 	Makefile
 	src/Makefile
