Rename binary from mount.odfs to mount.onedrive

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,8 @@
-bin_PROGRAMS = mount.odfs
-mount_odfs_SOURCES = main.c option.c
-mount_odfs_CFLAGS = -DFUSE_USE_VERSION=31 -D_FILE_OFFSET_BITS=64 $(FUSE_CFLAGS)
-mount_odfs_LDADD = $(FUSE_LIBS)
+bin_PROGRAMS = mount.onedrive
+mount_onedrive_LDADD = $(FUSE_LIBS)
+mount_onedrive_SOURCES = \
+	main.c \
+	option.c
+mount_onedrive_CFLAGS = \
+	-DFUSE_USE_VERSION=31 \
+	-D_FILE_OFFSET_BITS=64 $(FUSE_CFLAGS)
