Initializes authentication server

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,12 @@
 bin_PROGRAMS = mount.onedrive
-mount_onedrive_LDADD = $(FUSE_LIBS)
+mount_onedrive_LDADD = $(FUSE_LIBS) $(MICROHTTPD_LIBS)
 mount_onedrive_SOURCES = \
+	auth.c \
 	main.c \
+	operation.c \
 	option.c
 mount_onedrive_CFLAGS = \
 	-DFUSE_USE_VERSION=31 \
-	-D_FILE_OFFSET_BITS=64 $(FUSE_CFLAGS)
+	-D_FILE_OFFSET_BITS=64 \
+	$(FUSE_CFLAGS) \
+	$(MICROHTTPD_CFLAGS)
