--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,9 +2,14 @@ bin_PROGRAMS = mount.onedrive
 mount_onedrive_LDADD = $(FUSE_LIBS) $(MICROHTTPD_LIBS)
 mount_onedrive_SOURCES = \
 	auth.c \
+	auth.h \
+	dispatcher.c \
+	dispatcher.h \
 	main.c \
 	operation.c \
-	option.c
+	operation.h \
+	option.c \
+	option.h
 mount_onedrive_CFLAGS = \
 	-DFUSE_USE_VERSION=31 \
 	-D_FILE_OFFSET_BITS=64 \
