--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,18 +1,18 @@
 bin_PROGRAMS = mount.onedrive
 mount_onedrive_LDADD = $(CURL_LIBS) $(FUSE_LIBS) $(MICROHTTPD_LIBS)
 mount_onedrive_SOURCES = \
-	auth.c \
-	auth.h \
-	client.c \
-	client.h \
-	dispatcher.c \
-	dispatcher.h \
-	fs.c \
-	fs.h \
-	main.c \
-	option.c \
-	option.h
-mount_onedrive_CFLAGS = \
+	auth.cpp \
+	auth.hpp \
+	client.cpp \
+	client.hpp \
+	dispatcher.cpp \
+	dispatcher.hpp \
+	fs.cpp \
+	fs.hpp \
+	main.cpp \
+	option.cpp \
+	option.hpp
+mount_onedrive_CXXFLAGS = \
 	-DFUSE_USE_VERSION=31 \
 	-D_FILE_OFFSET_BITS=64 \
 	$(CURL_CFLAGS) \
