--- a/configure.ac
+++ b/configure.ac
@@ -12,6 +12,9 @@ PKG_CHECK_MODULES([CURL], [libcurl >= 7.66.0])
 PKG_CHECK_MODULES([FUSE], [fuse3 >= 3.2.1])
 PKG_CHECK_MODULES([MICROHTTPD], [libmicrohttpd >= 0.9.59])
 
+AX_BOOST_BASE([1.75], [], AC_MSG_ERROR([cannot find any boost libraries]))
+AX_BOOST_ASIO
+
 AC_CONFIG_FILES(
 	Makefile
 	src/Makefile
