--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,9 +2,9 @@ bin_PROGRAMS = mount.onedrive
 mount_onedrive_LDFLAGS = $(BOOST_LDFLAGS)
 mount_onedrive_LDADD = \
 	$(BOOST_ASIO_LIB) \
-	$(CURL_LIBS) \
 	$(FUSE_LIBS) \
-	$(MICROHTTPD_LIBS)
+	$(MICROHTTPD_LIBS) \
+	$(OPENSSL_LIBS)
 mount_onedrive_SOURCES = \
 	auth.cpp \
 	auth.hpp \
@@ -12,16 +12,18 @@ mount_onedrive_SOURCES = \
 	client.hpp \
 	fs.cpp \
 	fs.hpp \
-	io.cpp \
-	io.hpp \
+	fuse.cpp \
+	fuse.hpp \
 	main.cpp \
 	option.cpp \
-	option.hpp
+	option.hpp \
+	program.cpp \
+	program.hpp
 mount_onedrive_CPPFLAGS = \
 	-DFUSE_USE_VERSION=31 \
 	-D_FILE_OFFSET_BITS=64 \
 	$(BOOST_CPPFLAGS)
 mount_onedrive_CXXFLAGS = \
-	$(CURL_CFLAGS) \
 	$(FUSE_CFLAGS) \
-	$(MICROHTTPD_CFLAGS)
+	$(MICROHTTPD_CFLAGS) \
+	$(OPENSSL_CFLAGS)
