--- a/configure.ac
+++ b/configure.ac
@@ -8,9 +8,9 @@ AC_PROG_CXX
 
 AX_CXX_COMPILE_STDCXX([17], [noext], [mandatory])
 
-PKG_CHECK_MODULES([CURL], [libcurl >= 7.66.0])
 PKG_CHECK_MODULES([FUSE], [fuse3 >= 3.2.1])
 PKG_CHECK_MODULES([MICROHTTPD], [libmicrohttpd >= 0.9.59])
+PKG_CHECK_MODULES([OPENSSL], [openssl >= 1.0.2])
 
 AX_BOOST_BASE([1.75], [], AC_MSG_ERROR([cannot find any boost libraries]))
 AX_BOOST_ASIO
