Ignore config.guess, config.sub and autoconf-backup

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 *.o
 .deps
+/*~
 /.vscode/
 /aclocal.m4
 /autom4te.cache/
 /compile
+/config.guess
 /config.log
 /config.status
+/config.sub
 /configure
 /depcomp
 /install-sh
